distribution XML-Compile-0.85.tar.gz

--- a/html/manual/main.html
+++ b/html/manual/main.html
@@ -9,6 +9,9 @@
 <!--{chapter SYNOPSIS   }-->
 <!--{chapter DESCRIPTION}-->
 <!--{chapter DETAILS    }-->
+<!--{chapter "SEE ALSO" }-->
+<!--{chapter LICENSE    }-->
+<!--{chapter COPYRIGHTS }-->
 
 </body>
 </html>
