distribution XML-Compile-1.01.tar.gz

--- a/html/other/index.html
+++ b/html/other/index.html
@@ -16,7 +16,7 @@
     control by a schema</p>
 
     <p>A good starting-point is method compile(), called on a
-    <a href="/XML/Compile/Schema/">XML::Compile::Schema</a> object.
+    <a href="XML_Compile_Schema/">XML::Compile::Schema</a> object.
     
     <dl>
     <dt><!--{a manuals}-->all manuals</a></dt>
