distribution XML-Compile-1.31.tar.gz

--- a/html/other/diagnostics/index.html
+++ b/html/other/diagnostics/index.html
@@ -15,19 +15,19 @@
     </td><td valign="top">
        <!--{a manuals}-->all manuals</a><br />
        <!--{a methods}-->all methods and functions</a><br />
-       <b>all diagnostics</b><br />
+       <b>all&nbsp;diagnostics</b><br />
        <!--{a details}-->all details</a><br />
     </td></tr>
 </table>
 
 <h2>errors</h2>
 <table>
-<!--{index DIAGNOSTICS type error}-->
+<!--{index DIAGNOSTICS type => error}-->
 </table>
 
 <h2>warnings</h2>
 <table>
-<!--{index DIAGNOSTICS type warnings}-->
+<!--{index DIAGNOSTICS type => warnings}-->
 </table>
 
 </body>
