--- a/html/other/methods/index.html
+++ b/html/other/methods/index.html
@@ -16,7 +16,7 @@
     </td><td valign="top">
        <!--{a manuals}-->all manuals</a><br />
        <b>all methods and functions</b><br />
-       <!--{a diagnostics}-->all diagnostics</a><br />
+       <!--{a diagnostics}-->all&nbsp; diagnostics</a><br />
        <!--{a details}-->all details</a><br />
     </td></tr>
 </table>
