--- a/html/manual/head.html
+++ b/html/manual/head.html
@@ -16,7 +16,7 @@
     </td><td valign="top">
        <!--{a manuals}-->all manuals</a><br />
        <!--{a methods}-->all methods and functions</a><br />
-       <!--{a diagnostics}-->all diagnostics</a><br />
+       <!--{a diagnostics}-->all&nbsp;diagnostics</a><br />
        <!--{a details}-->all details</a><br />
     </td></tr>
 </table>
