--- a/html/other/manuals/head.html
+++ b/html/other/manuals/head.html
@@ -16,7 +16,7 @@
     </td><td valign="top">
        <b>all manuals</b><br />
        <!--{a methods}-->all methods and functions</a><br />
-       <!--{a diagnostics}-->all diagnostics</a><br />
+       <!--{a diagnostics}-->all&nbsp;diagnostics</a><br />
        <!--{a details}-->all details</a><br />
     </td></tr>
 </table>
