distribution XML-Compile-1.52.tar.gz

--- a/html/manual/sorted.html
+++ b/html/manual/sorted.html
@@ -18,8 +18,11 @@
 Overloaded:
 <!--{list ALL subroutine_types => overload}--><br />
 
-Methods and functions:
-<!--{list ALL subroutine_types => method|tie|function}--><br />
+Methods:
+<!--{list ALL subroutine_types => method|tie}--><br />
+
+Functions:
+<!--{list ALL subroutine_types => function}--><br />
 
 </body>
 </html>
